Fix nav bar on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,8 +209,13 @@ html {
     min-height: 100vh;
   }
 
-  header {
-    height: 96px;
+  .celebrant-name {
+    font-size: 1.5rem;
+  }
+
+  nav ul {
+    gap: 8px;
+    font-size: 1rem;
   }
 
   #home {
